packages/yew-macro/tests/function_component_attr/applied-to-non-fn-fail.stderr
error: `function_component` attribute can only be applied to functions
 --> $DIR/applied-to-non-fn-fail.rs:9:1
  |
9 | struct Test;
  | ^^^^^^^^^^^^
