packages/yew-macro/tests/function_component_attr/applied-to-non-fn-fail.rs
use yew::prelude::*;

#[derive(Clone, Properties, PartialEq)]
struct Props {
    a: usize,
}

#[function_component(Comp)]
struct Test;

fn main() {}
